snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.module.sha512
d08b628267f62d9469f497819215279b3e53c84679fb759549d0421572d65aa06b5d394cd2e9b3cbba350167f052c0c310b7b29f6371209d161fef58eb84357d